--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# Telegram API credentials - DO NOT COMMIT THIS FILE
+# Telegram API credentials
 # Rename this file to .env and replace the values with your own credentials
 
 # Your API ID (numbers only)
